--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "API login de usuario - fase tecnica para vaga de Dev Backend da HVEX",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +20,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-rescue": "^1.1.31",
     "mongodb": "^4.1.3"
   },
   "devDependencies": {
