--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --runInBand"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,8 @@
     "mongodb": "^4.1.3"
   },
   "devDependencies": {
+    "frisby": "^2.1.3",
+    "jest": "^27.2.4",
     "nodemon": "^2.0.13"
   }
 }
